# ChangeLog for media-gfx/asymptote
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/asymptote/ChangeLog,v 1.43 2009/04/11 16:52:41 grozin Exp $

*asymptote-1.70 (11 Apr 2009)

  11 Apr 2009; Andrey Grozin <grozin@gentoo.org>
  -files/asymptote-1.67-configure-ac.patch,
  -files/asymptote-1.67-xdg-utils.patch,
  +files/asymptote-1.70-configure-ac.patch,
  +files/asymptote-1.70-xdg-utils.patch, -asymptote-1.67.ebuild,
  +asymptote-1.70.ebuild:
  Version bump

*asymptote-1.68 (24 Mar 2009)

  24 Mar 2009; Andrey Grozin <grozin@gentoo.org>
  -files/asymptote-1.66-configure-ac.patch,
  -files/asymptote-1.66-xdg-utils.patch,
  +files/asymptote-1.68-configure-ac.patch,
  +files/asymptote-1.68-xdg-utils.patch, -asymptote-1.66.ebuild,
  +asymptote-1.68.ebuild:
  Version bump

*asymptote-1.67 (19 Mar 2009)

  19 Mar 2009; Andrey Grozin <grozin@gentoo.org>
  -files/asymptote-1.65-configure-ac.patch,
  -files/asymptote-1.65-xdg-utils.patch,
  +files/asymptote-1.67-configure-ac.patch,
  +files/asymptote-1.67-xdg-utils.patch, -asymptote-1.65.ebuild,
  +asymptote-1.67.ebuild:
  Version bump; added -j1 to emake asymptote.pdf in an attempt to fix the
  bug #260606 (which I cannot reproduce)

*asymptote-1.66 (27 Feb 2009)

  27 Feb 2009; Andrey Grozin <grozin@gentoo.org>
  -files/asymptote-1.64-configure-ac.patch,
  -files/asymptote-1.64-xdg-utils.patch,
  +files/asymptote-1.66-configure-ac.patch,
  +files/asymptote-1.66-xdg-utils.patch, -asymptote-1.64.ebuild,
  +asymptote-1.66.ebuild:
  Version bump

*asymptote-1.65 (20 Feb 2009)

  20 Feb 2009; Andrey Grozin <grozin@gentoo.org>
  -files/asymptote-1.62-configure-ac.patch,
  -files/asymptote-1.62-xdg-utils.patch,
  +files/asymptote-1.65-configure-ac.patch,
  +files/asymptote-1.65-xdg-utils.patch, -asymptote-1.62.ebuild,
  +asymptote-1.65.ebuild:
  Version bump

*asymptote-1.64 (19 Feb 2009)

  19 Feb 2009; Andrey Grozin <grozin@gentoo.org>