@@ -12,7 +12,7 @@ DIST asymptote-1.29.src.tgz 933266 RMD160 013a5f8f706159ea564811cd044a12fe4b6e58
 DIST asymptote-1.68.src.tgz 1343883 RMD160 89e36533beae2980e840be4f69297ee2fc02b37c SHA1 9857cc896a53051e4d7728f227b99017d07dd822 SHA256 07f0cef350de9dfadb531e0b3cd996f234b486e41fa57034fc392bdf5f230f97
 DIST asymptote-1.70.src.tgz 1354330 RMD160 4ad7fb162c600841fc74e94b138a62dbf015efd5 SHA1 aabbd27004b5b908c019257f1f4c3ad73070ca8c SHA256 ea2c5520f7ee431dfe9aee78cefcc745a176d67295c961a8464a458d2b9c5958
 EBUILD asymptote-1.29.ebuild 3549 RMD160 5e35c186b42c99ade23c553f9f7f5edabadcfc77 SHA1 88cab29c099df6595bc9c3e8124a2a6eab4e247b SHA256 547bc8e39d20db6a379e3ffa3c020010e96b43b26a41b5e7bc177fb2a6cf8975
-EBUILD asymptote-1.68.ebuild 4727 RMD160 3a08973afc01da2ddee404be396f4b7fdd7908d9 SHA1 78fe875e024f34f88cbabef34539d126056e663e SHA256 1d3069b9f2370078e191260eded8d1d64bd2ec60bd09357e8bb9bdfb223a1e99
-EBUILD asymptote-1.70.ebuild 4727 RMD160 f260eda09f4de7dcc6a0781653ef4cfe2b0d681f SHA1 3adf8815571fe2b769e6f02f0550e3acc2026b87 SHA256 4c55f2279a5030f5b8a5fb5d177e07048288166a792c68bc705d4c7b5ed8c313
-MISC ChangeLog 12761 RMD160 88ed6bc86c766216de1b23b843555d463514ad2b SHA1 509f3f67f1d60b39713dd826193816228b825b49 SHA256 182e17ec430bb2cfd2f0e4d7964b07f18a055a5d9a41bdbf5ecc5b9e751bfef0
+EBUILD asymptote-1.68.ebuild 4729 RMD160 5303274e869fd391a6725c98c3707e966c25a875 SHA1 e8830e846e94f6dcc391592cc0ca91260c502987 SHA256 5d416467d10615c3799fdbf07b67dd93bb3c62b5382c1f97f280d4fa5359e6b2
+EBUILD asymptote-1.70.ebuild 4729 RMD160 b369d03817880c5e84b63759f47cfd55a3f00885 SHA1 442fd69b6f92a49a86726b0cb5263602dddb839a SHA256 b2bcc2a5065a8dc32924067d54a5a7fabd174a180fc2dc01ca2d2f386ad7435f
+MISC ChangeLog 12882 RMD160 593ef5ebd124bde733e22b635c04625efae84d7d SHA1 c92548195c4c0385ce85adc95b20410980f7b6fa SHA256 896668e6ab853bb9407237bc09f400ec4cfaa5880a79c3ba77db2f02246ea8b3
 MISC metadata.xml 869 RMD160 4719ac66d805256a91cf9c311ea75e6d53db256e SHA1 f00600bb09e08fd31ba4fa15414bd3d578a4f136 SHA256 41c4190d40edabcbed20b712c8dca48783e336c7cd14bff51015966b263865b5
